# usc-cs104

cs104/: README.md
cs104/hw1/: README.md  first_memtest.cpp  flexCharManager.cpp  flexCharManager.h  hw1.txt  palindrome.cpp  second_memtest.cpp
cs104/hw1_tests/: CMakeLists.txt
cs104/hw1_tests/palindrome/: CMakeLists.txt  palindrome_test.cpp
cs104/hw2/: README.md  duck_duck_goose.cpp  duck_duck_goose.h
cs104/hw2_tests/: CMakeLists.txt  README.md  gen_grade_report.py
cs104/hw2_tests/circular_list_tests/: CMakeLists.txt  basic_tests.cpp  circular_list_utils.cpp  circular_list_utils.h  insertion_tests.cpp  remove_tests.cpp  set_tests.cpp
cs104/hw2_tests/duck_duck_goose_tests/: CMakeLists.txt  basic_tests.cpp  duck_duck_goose_analyzer.cpp  duck_duck_goose_analyzer.h  duck_duck_goose_runtime.cpp  duck_duck_goose_utils.cpp  duck_duck_goose_utils.h  single_round_test.cpp  whole_program_test.cpp
cs104/hw2_tests/rubric/: circular_list.config  duck_duck_goose.config  selection_sort.config
cs104/hw2_tests/selection_sort_tests/: CMakeLists.txt  basic_tests.cpp  selection_sort_runtime.cpp  selection_sort_utils.cpp  selection_sort_utils.h  test_find_min.cpp  test_selection_sort.cpp
cs104/hw2_tests/test_cmake_lib/: 104CompileFlags.cmake  CustomTests.cmake
cs104/hw2_tests/testing_utils/: CMakeLists.txt  user_code_runner.cpp  user_code_runner.h
cs104/hw3/: README.md  circular_list_int.cpp  hw3.txt  stackint.h
cs104/hw3_tests/: cmake_problem.py  gen_grade_report.py
cs104/hw3_tests/arith_parser_tests/: parser_utils.h
cs104/hw3_tests/hw3_tests/: CMakeLists.txt
cs104/hw3_tests/hw3_tests/arith_parser_tests/: CMakeLists.txt  parser_tests.cpp  parser_utils.cpp
cs104/hw3_tests/hw3_tests/rubric/: stack.config
cs104/hw3_tests/hw3_tests/stack_tests/: CMakeLists.txt  stack_runtime_tests.cpp
cs104/hw3_tests/hw3_tests/testing_utils/: misc_utils.h  random_generator.h  runtime_evaluator.h  user_code_runner.cpp  user_code_runner.h
cs104/hw3_tests/rubric/: arith_parser.config
cs104/hw3_tests/stack_tests/: stack_tests.cpp
cs104/hw3_tests/testing_utils/: CMakeLists.txt  runtime_evaluator.cpp
cs104/hw4/: Board.h  ConsolePrinter.cpp  Dictionary.cpp  Makefile  Move.cpp  Move.h  Player.cpp  Player.h  README.md  Square.h  scrabble.cpp
cs104/hw5/: fatalist.cpp  functor.cpp  hw5.txt  msort.h
cs104/hw5_tests/: CMakeLists.txt  README.md  gen_grade_report.py
cs104/hw5_tests/cave_tests/: CMakeLists.txt  cave_tests.cpp
cs104/hw5_tests/fatalist_tests/: CMakeLists.txt  fatalist_runtime_tests.cpp  fatalist_tests.cpp
cs104/hw5_tests/functor_tests/: CMakeLists.txt  functor_tests.cpp
cs104/hw5_tests/msort_tests/: CMakeLists.txt  msort_runtime_tests.cpp  msort_tests.cpp
cs104/hw5_tests/rubric/: cave.config  fatalist.config  functor.config  msort.config
cs104/hw5_tests/testing_utils/: CMakeLists.txt  misc_utils.cpp  misc_utils.h
cs104/hw6/: Makefile  MinHeap.h  search.cpp
cs104/hw7/: README.md  bst.h  rotateBST.h
cs104/hw7_tests/: CMakeLists.txt  gen_grade_report.py
cs104/hw7_tests/avl_tests/: CMakeLists.txt  check_avl.h  test_remove.cpp
cs104/hw7_tests/bst_tests/: CMakeLists.txt  check_bst.h  test_insert.cpp  test_remove.cpp
cs104/hw7_tests/rotate_tests/: CMakeLists.txt  publicified_rotatebst.h  test_rotate.cpp  test_same_keys.cpp  test_transform.cpp
cs104/hw7_tests/rubric/: avl.config  bst.config  rotate.config
cs104/hw7_tests/test_cmake_lib/: CustomTests.cmake
cs104/hw8/: AIPlayer.cpp  ConsolePrinter.cpp  Dictionary.cpp  Exceptions.h  MaxLetterAI.h  MaxScoreAI.cpp  MaxScoreAI.h  Move.cpp  Move.h  README.md  Trie.cpp  Trie.h  scrabble.cpp
cs104/lab10/: graph.cpp
cs104/lab11/: traversal.cpp
cs104/lab12/: bst.cpp
cs104/lab13/: hashtables.cpp
cs104/lab2/: decoder  sample
cs104/lab4/part1/: Makefile  charizard
cs104/lab4/part2/: Makefile
cs104/lab5/: CheckBalanced.cpp
cs104/lab6/: order.cpp
cs104/lab7/src/: fighter.cpp  healer.cpp  inventory.cpp
cs104/lab8/: AllCombos  AllCombos.cpp  AllCombos.h
cs104/lab9/: Makefile  llist.h  pokedex
hw1/: hw1q5.cpp  simpleCharManager.cpp
hw2/: circular_list_int.cpp  hw2.txt  selection_sort.cpp  selection_sort.h
hw3/: Makefile  circular_list_int.h  parser.cpp  stackint.cpp
hw4/: Board.cpp  Dictionary.h  scrabble.cpp
hw5/: Makefile  README.md  cave.cpp  functor.h
hw6/: README.md  coloring.cpp
hw7/: avlbst.h  bst.h
hw7_api_check/: CMakeLists.txt  avl_checker.cpp  avl_node_checker.cpp  bst_checker.cpp  dummy_main.cpp  iterator_checker.cpp  node_checker.cpp  rotate_checker.cpp
hw8/: AIPlayer.h  Bag.cpp  Board.cpp  Board.h  Dictionary.h  Makefile  MaxLetterAI.cpp  Player.cpp  Player.h  Square.h  config.txt
